--- a/app/views/templates/profile.html.erb
+++ b/app/views/templates/profile.html.erb
@@ -1,6 +1,6 @@
 <h2>Profile</h2>
 <p>This is the profile page</p>
-<form action="#" method="post">
+<form>
   <div>
     <label for="name">Text Input:</label>
     <input class="form-control" type="text" name="name" id="name" value="" tabindex="1" />
