--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,5 +1,18 @@
-<ul class="list-unstyled sidebar-list" ng-controller="SideBarController as ctrl">
-  <li><a ng-class="{'active': ctrl.currentLink=='home'}" href="/"><i class="fa fa-home"></i> Home</a></li>
-  <li><a ng-class="{'active': ctrl.currentLink=='calendar'}" href="/calendar"><i class="fa fa-calendar"></i> Calendar</a></li>
-  <li><a ng-class="{'active': ctrl.currentLink=='profile'}" href="/profile"><i class="fa fa-user"></i> Profile</a></li>
-</ul>
+<div id="sidebar-wrapper" ng-controller="SideBarController as ctrl">
+  <ul class="sidebar-nav">
+    <li class="sidebar-brand">
+      <a href="#">
+        Test App
+      </a>
+    </li>
+    <li>
+      <a ng-class="{'active': ctrl.currentLink=='Home'}" href="/"> <i class="fa fa-home"></i>  Home</a>
+    </li>
+    <li>
+      <a ng-class="{'active': ctrl.currentLink=='Calendar'}" href="/calendar"><i class="fa fa-calendar"></i>  Calendar</a>
+    </li>
+    <li>
+      <a ng-class="{'active': ctrl.currentLink=='Profile'}" href="/profile"><i class="fa fa-user"></i>  Profile</a>
+    </li>
+  </ul>
+</div>
