--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,26 @@
 <html ng-app="app">
 <head>
   <title>TestApp</title>
+  <script src="https://use.fontawesome.com/29d3535451.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.9.0/fullcalendar.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <%= stylesheet_link_tag    'application' %>
   <%= javascript_include_tag 'application' %>
-  <script src="https://use.fontawesome.com/29d3535451.js"></script>
   <%= csrf_meta_tags %>
   <base href="/">
 </head>
 <body>
-<%= render partial: 'shared/header' %>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2">
-      <%= render partial: 'shared/sidebar' %>
-    </div>
-    <div class="col-md-10">
-      <div ng-view></div>
+<div id="wrapper">
+  <%= render partial: 'shared/sidebar' %>
+  <div id="page-content-wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <%= render partial: 'shared/header' %>
+          <div ng-view></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
