--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" ng-controller="TopBarController as ctrl">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">TestApp</a>
+      <h3 class="top-bar-h"><i class="fa fa-bars toggle-sidebar" aria-hidden="true"></i> <span ng-bind="ctrl.currentLink"></span></h3>
+      <!--<a class="navbar-brand" href="#"><i class="fa fa-bars toggle-sidebar" aria-hidden="true"></i> <span ng-bind="ctrl.currentLink"></span></a>-->
     </div>
   </div>
 </nav>
