--- a/app/views/templates/profile.html.erb
+++ b/app/views/templates/profile.html.erb
@@ -1,39 +1,17 @@
-<form>
-  <div>
-    <label for="name">Text Input:</label>
-    <input class="form-control" type="text" name="name" id="name" value="" tabindex="1" />
+<form ng-submit="ctrl.save()">
+  <div class="form-group">
+    <label for="first_name">First Name</label>
+    <input type="text" class="form-control" id="first_name" ng-model="ctrl.profile.first_name">
   </div>
-
-  <div>
-    <h4>Radio Button Choice</h4>
-
-    <label for="radio-choice-1">Choice 1</label>
-    <input type="radio" name="radio-choice-1" id="radio-choice-1" tabindex="2" value="choice-1" />
-
-    <label for="radio-choice-2">Choice 2</label>
-    <input type="radio" name="radio-choice-2" id="radio-choice-2" tabindex="3" value="choice-2" />
+  <div class="form-group">
+    <label for="last_name">Last Name</label>
+    <input type="text" class="form-control" id="last_name" ng-model="ctrl.profile.last_name">
   </div>
-
-  <div>
-    <label for="select-choice">Select Dropdown Choice:</label>
-    <select class="form-control" name="select-choice" id="select-choice">
-      <option value="Choice 1">Choice 1</option>
-      <option value="Choice 2">Choice 2</option>
-      <option value="Choice 3">Choice 3</option>
-    </select>
+  <div class="form-group">
+    <label for="email_name">Email</label>
+    <input type="email" class="form-control" id="email_name" ng-model="ctrl.profile.email">
   </div>
-
-  <div>
-    <label for="textarea">Textarea:</label>
-    <textarea class="form-control" cols="40" rows="8" name="textarea" id="textarea"></textarea>
-  </div>
-
-  <div>
-    <label for="checkbox">Checkbox:</label>
-    <input type="checkbox" name="checkbox" id="checkbox" />
-  </div>
-
-  <div>
-    <input class="btn btn-success" type="submit" value="Submit" />
+  <div class="form-group">
+    <input type="submit" value="Save" class="btn btn-success">
   </div>
 </form>
